--- a/.gitconfig
+++ b/.gitconfig
@@ -24,3 +24,8 @@
 	interactive = auto
 	grep = auto
 
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
